Use Java 9 Lists